mlanywhere-all-in-one.yml
apiVersion: v1
kind: Service
metadata:
  name: mlanywhere-svc
  labels:
    app: mlanywhere-svc
spec:
  type: NodePort
  ports:
  - port: 5000
    nodePort: 30003
    protocol: TCP
  selector:
    app: mlanywhere

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mlanywhere
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: mlanywhere
    spec:
      containers:
      - name: mlanywhere
        image: mlanywhere:mlanywhere-beta-v1-app

        imagePullPolicy: "IfNotPresent"

        ports:
          - containerPort: 5000
