kf-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: kubeflow

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ambassador
          servicePort: ambassador
